--- a/style.css
+++ b/style.css
@@ -14,39 +14,39 @@
 }
 @font-face {
     font-family: popinsbold;
-    src: url(/fonts/Poppins-Bold.ttf);
+    src: url(./fonts/Poppins-Bold.ttf);
 }
 @font-face {
     font-family: popinslig;
-    src: url(/fonts/Poppins-Light.ttf);
+    src: url(./fonts/Poppins-Light.ttf);
 }
 @font-face {
     font-family: popinsreg;
-    src: url(/fonts/Poppins-Regular.ttf);
+    src: url(./fonts/Poppins-Regular.ttf);
 }
 @font-face {
     font-family: popinsmed;
-    src: url(/fonts/Poppins-Medium.ttf);
+    src: url(./fonts/Poppins-Medium.ttf);
 }
 @font-face {
     font-family: volkbold;
-    src: url(/fonts/Volkhov-Bold.ttf);
+    src: url(./fonts/Volkhov-Bold.ttf);
 }
 @font-face {
     font-family: volkreg;
-    src: url(/fonts/Volkhov-Regular.ttf);
+    src: url(./fonts/Volkhov-Regular.ttf);
 }
 @font-face {
     font-family: circblack;
-    src: url(/fonts/CircularStd-Black.ttf);
+    src: url(./fonts/CircularStd-Black.ttf);
 }
 @font-face {
     font-family: circbook;
-    src: url(/fonts/CircularStd-Book.ttf);
+    src: url(./fonts/CircularStd-Book.ttf);
 }
 @font-face {
     font-family: circmed;
-    src: url(/fonts/CircularStd-Medium.ttf);
+    src: url(./fonts/CircularStd-Medium.ttf);
 }
 .bg{
     background-image: url(./assets/Home/Banner\ 1.png);
