--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ h2{
 }
 
 .mask{
-    background-image:url(/assets/Home/Group\ 1000001735.png);
+    background-image:url(assets/Home/Group\ 1000001735.png);
     height: 20em;
     width: 50%;
     background-repeat: no-repeat;
@@ -547,7 +547,7 @@ h2{
      text-align: center;
 }
 .mask1{
-    background-image: url(/assets/Home/Group\ 1000001734.png);
+    background-image: url(assets/Home/Group\ 1000001734.png);
     height: 20em;
     width: 50%;
     background-repeat: no-repeat;
