--- a/style.css
+++ b/style.css
@@ -51,8 +51,12 @@
 .bg{
     background-image: url(./assets/Home/Banner\ 1.png);
     height: 800px;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
+}
+.bgimg{
+    width: 100%;
+    display: none;
 }
 .topper{
     display: flex;
@@ -75,7 +79,7 @@
     margin-top: 20px;
 
     img{
-        width: 7em;
+       max-width: 7em;
     }
 }
 .menu ul{
@@ -87,7 +91,7 @@
     margin-right: 30px;
 }
 .menu ul li:last-child img{
-    width: 40px;
+    max-width: 40px;
 }
 .menu a{
     text-decoration: none;
@@ -106,17 +110,17 @@
    align-items: center;
 }
 .members p{
-    width: 16em;
+    max-width: 16em;
     font-family: popinsbold;
     font-size: 2em;
     color: #ffffff;
-    margin-top: 5em;
+    margin-top: 4em;
 }
 
 .search{
     margin-top: 3em;
     font-family: popinsmed;
-    width: 50%;
+    width:50%;
     border-radius:10px ;
     color: #ffffff;
     position: relative; 
@@ -148,8 +152,9 @@
 }
 .stack{
  img{
-    width: 9em;
+    max-width: 9em;
     margin-top: 2em;
+    margin-left: 17px;
  }
  span{
    margin-left: 15px;
@@ -171,12 +176,12 @@
     align-items: center;
 }
 .emirates img{
-    width:7em;
+    max-width:7em;
     margin-top: 3em;
     margin-bottom: 3em;
 }
 .travia img{
-    width: 33em;
+    max-width: 33em;
     /* margin-left: 5em; */
     margin-top: 5em;
 }
@@ -199,7 +204,7 @@
 }
 h2{
     font-size: 2.5em;
-    width: 10em;
+    max-width: 10em;
     margin-bottom: 20px;
     text-transform: capitalize;
 }
@@ -280,13 +285,13 @@ h2{
 }
 .blood img{
     margin-left: 3.5em;
-    width: 3em;
+    max-width: 3em;
     margin-bottom: 1.5em;
 }
 .blood p{
     text-align: center;
     font-family: popinsreg;
-    width: 12em;
+    max-width: 12em;
     font-size: 13px;
 }
 .blood h4{
@@ -327,7 +332,7 @@ h2{
         text-transform: capitalize;
         font-family: volkreg;
         font-size: 2.5em;
-        width: 10.5em;
+        max-width: 10.5em;
         margin-bottom: 0.5em;
     }
 
@@ -346,7 +351,7 @@ h2{
     flex-basis: 100%;
     display: flex;
     img{
-        width: 50px;
+        max-width: 50px;
         height: 50px;
         margin-top: 10px;
 
@@ -366,7 +371,7 @@ h2{
     .ron{
         margin-left: 1em;
         p{
-            width:65%
+            max-width:65%
         }
     }
     
@@ -374,7 +379,7 @@ h2{
 .amet{
     background-image: url(./assets/Home/Rectangle\ 19294.png);
     height: 18em;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -399,7 +404,7 @@ h2{
         text-transform: capitalize;
         font-family: volkreg;
         font-size: 2.5em;
-        width: 10.5em;
+        max-width: 10.5em;
         color: #ffffff;
     }
 }
@@ -437,13 +442,13 @@ h2{
         text-transform: capitalize;
         font-family: volkreg;
         font-size: 2.5em;
-        width: 15em;
+        max-width: 15em;
         margin-top: 10px;
     }
     p{
         font-family: popinsreg;
         font-size: 14px;
-        width: 35em;
+        max-width: 35em;
         margin-top: 1.5em;
     }
     ul{
@@ -456,7 +461,7 @@ h2{
         border: 1px solid rgba(128, 128, 128, 0.399);
         margin-bottom: 1em;
         border-radius: 1.5em;
-        width: 27em;
+        max-width: 27em;
         padding:5px;
     }
     ul li a{
@@ -472,13 +477,13 @@ h2{
     position: relative;
 }
 .hats img{
-    width: 19em;
+    max-width: 19em;
     margin-top: 13em;
     margin-left: 2em;
     overflow: hidden;
 }
 .lap{
-    width: 85%;
+    max-width: 85%;
     border:1px solid #000000;
     color: #ffffff;
     background-color:navy;
@@ -495,7 +500,7 @@ h2{
         font-size: 10px;
         font-family: popinsreg;
         text-align: left;
-        /* width: 55%; */
+        /* max-width: 55%; */
     }
 }
 
@@ -599,7 +604,7 @@ h2{
 h4{
     font-family: volkreg;
     font-size: 2.5em;
-    width: 11em;
+    max-width: 11em;
     text-align: center;
     margin-left: 7em;
     margin-bottom: 1em;
@@ -611,14 +616,14 @@ h4{
 }
 .vita {
 img{
-    width: 17em;
+    max-width: 17em;
 }
 i{
     margin: 2em 10px 10px 0;
     color: #777171;
 }
 h3{
-    width: 13em;
+    max-width: 13em;
     margin-bottom: 10px;
     font-family: circmed;
     font-size: 1.2em;
@@ -637,7 +642,7 @@ span{
 }
 p{
     font-size: 12px;
-    width: 23em;
+    max-width: 23em;
     margin: 10px 0 20px 0;
     font-family: popinsreg;
 }
@@ -685,7 +690,7 @@ a:hover{
          font-family: volkreg;
          text-transform: capitalize;
          font-size: 2em;
-         width: 15em;
+         max-width: 15em;
          margin: 0 auto;
          margin-top: 3px;
      }
@@ -695,7 +700,7 @@ a:hover{
         padding: 20px 10px 10px 10px;
         text-align: center;
         border: 1px solid #d3c8c84a;
-        width: 40%;
+        max-width: 40%;
         margin: 0 auto;
         border-radius: 10px;
         background-color: #ffffff;
@@ -712,7 +717,7 @@ a:hover{
 .wild{
     position: relative;
     img{
-        width: 123px;
+        max-width: 123px;
         height: 120px;
         margin-top: 1.2em;
         position: absolute;
@@ -754,18 +759,18 @@ a:hover{
 }
 .footer1{
     img{
-        width: 57%;
+        max-width: 57%;
     }
     h4{
         margin-top: 10px;
         font-size: 13px;
         font-family: popinsreg;
-        width: 14em;
+        max-width: 14em;
     }
 } 
 .mess img{
 margin-top: 1em;
-width: 20px;
+max-width: 20px;
 height: 20px;
 margin-left: 5px;
 }
@@ -841,7 +846,7 @@ button{
 p{
     font-size: 10px;
     margin-top: 20px;
-    width: 19em;
+    max-width: 19em;
     font-family: popinsreg;
 }
 }
@@ -861,7 +866,7 @@ h4{
     /* background-image: url(/assets/About/Rectangle\ 19290.png); */
     background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(./assets/About/Rectangle\ 19290.png);
     height: 600px;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
 }
 .covid{
@@ -893,7 +898,7 @@ h4{
         }
        p{
         margin: 0 auto;
-        width: 16em;
+        max-width: 16em;
         font-family: popinsbold;
         font-size: 2em;
         color: #ffffff;
@@ -928,7 +933,7 @@ h4{
                 align-items: center;
                 
                 img{
-                    width:50px;
+                    max-width:50px;
                     height: 50px;
                     border-radius: 5px;
                     background-color: chartreuse;
@@ -949,7 +954,7 @@ h4{
     }
     .docthor{
         img{
-        width: 63%;
+        max-width: 63%;
         margin-left: 12em;
         margin-top: 6em;
        }
@@ -965,7 +970,7 @@ h4{
     .jase{
        .life{
         img{
-            width: 27%;
+            max-width: 27%;
             position: absolute;
             top: 6em;
             left: 13%;
@@ -973,7 +978,7 @@ h4{
        }
         .style {
         img{
-            width: 27%;
+            max-width: 27%;
             position: absolute;
             left: 13%;
             top: 30em;
@@ -982,7 +987,7 @@ h4{
     }
     .otto{
         margin-top: 3em;
-        width: 70%;
+        max-width: 70%;
         color: #ffffff;
         background-color: rgb(3, 3, 78);
         padding-inline: 15em;
@@ -1049,7 +1054,7 @@ h4{
             color: #ffffff;
         }
         p{
-            width: 85%;
+            max-width: 85%;
             margin: 0 auto;
             text-align: center;
             font-family: popinsreg;
@@ -1066,7 +1071,7 @@ h4{
                     display: flex;
                     .insta{
                         img{
-                            width:7em;
+                            max-width:7em;
                             position: absolute;
                             left: 3em;
                             bottom: -5em;
@@ -1074,7 +1079,7 @@ h4{
                 }
                 .insta1{
                     img{
-                        width:7em;
+                        max-width:7em;
                         position: absolute;
                         left: 18em;
                         bottom: -5em;
@@ -1082,7 +1087,7 @@ h4{
                 }
                 .insta2{
                     img{
-                        width:7em;
+                        max-width:7em;
                         position: absolute;
                         left: 35em;
                         bottom: -5em;
@@ -1090,7 +1095,7 @@ h4{
                 }
                 .insta3{
                     img{
-                        width:7em;
+                        max-width:7em;
                         position: absolute;
                         left: 50em;
                         bottom: -5em;
@@ -1107,7 +1112,7 @@ h4{
 .bg2{
     background-image: url(./assets/ContactUs/Rectangle\ 19290.png);
     height: 600px;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
 }
 .issues1{
@@ -1121,7 +1126,7 @@ h4{
     }
    p{
     margin: 0px 10em;
-    width: 16em;
+    max-width: 16em;
     font-family: popinsbold;
     font-size: 2em;
     color: #ffffff;
@@ -1149,7 +1154,7 @@ h4{
     font-family: volkreg;
     }
     p{
-        width: 47em;
+        max-width: 47em;
         margin: 0 auto;
         font-family: popinsreg;
         font-size: 14px;
@@ -1167,7 +1172,7 @@ h4{
             background-color:rgba(0, 5, 39, 0.83);
             background-image: url(./assets/ContactUs/Rectangle\ 23923.png);
             height: 25em;
-            width:34%;
+            max-width:34%;
             background-repeat: no-repeat;
             margin-right: 2em;
             border-radius: 10px;
@@ -1196,7 +1201,7 @@ h4{
             img{
                 position: absolute;
                 top: 9.5em;
-                width: 2em;
+                max-width: 2em;
                 margin-left: 1em;
             }
             h5{
@@ -1209,7 +1214,7 @@ h4{
             .campus{
                 position: absolute;
                 top: 12.5em;
-                width: 2em;
+                max-width: 2em;
                 margin-left: 1em;
             }
             h6{
@@ -1222,7 +1227,7 @@ h4{
             .crocs{
                 position: absolute;
                 top: 15.5em;
-                width: 2em;
+                max-width: 2em;
                 margin-left: 1em;
             }
             .messa{
@@ -1230,25 +1235,25 @@ h4{
                 .link{
                  position: absolute;
                 top: 21.5em;
-                width: 1.5em;
+                max-width: 1.5em;
                 margin-left: 5em;
                 }
                 .messengers{
                     position: absolute;
                     top: 21.5em;
-                    width: 1.5em;
+                    max-width: 1.5em;
                     margin-left: 8em;
                 }
                 .twitters{
                     position: absolute;
                     top: 21.5em;
-                    width: 1.5em;
+                    max-width: 1.5em;
                     margin-left: 11em;
                 }
                 .twoo{
                     position: absolute;
                     top: 21.5em;
-                    width: 1.5em;
+                    max-width: 1.5em;
                     margin-left: 14em;
                 }
             }
@@ -1271,7 +1276,7 @@ h4{
                     border: 1px solid rgb(98, 95, 95);
                     border-radius: 5px;
                     resize: none;
-                    width: 37em;
+                    max-width: 37em;
                     height: 10em;
                     padding-top: 10px;
                     padding-left: 10px;
@@ -1304,7 +1309,7 @@ h4{
 .bg3{
     background-image:  linear-gradient(rgba(0,0,0,0.4), rgba(0, 0, 0, 0.4)),url(./assets/OurPartners/Rectangle\ 19290.png);
     height: 600px;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
 }
 .issues2{
@@ -1318,7 +1323,7 @@ h4{
     }
    p{
     margin: 0px 8em;
-    width: 16em;
+    max-width: 16em;
     font-family: popinsbold;
     font-size: 2em;
     color: #ffffff;
@@ -1336,7 +1341,7 @@ h4{
     margin-top: 3em;
     }
     p{
-        width: 64em;
+        max-width: 64em;
         margin: 0 auto;
         font-family: popinsreg;
         font-size: 14px;
@@ -1354,7 +1359,7 @@ h4{
         margin: 0 auto;
         margin-bottom: 6em;
         img{
-            width: 12%;
+            max-width: 12%;
             margin-left: 7em;
         }
         a{
@@ -1375,7 +1380,7 @@ h4{
 .bg4{
     background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0, 0, 0, 0.4)), url(./assets/AllCategories/Rectangle\ 19290.png);
     height: 600px;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
 
     .issues3{
@@ -1390,7 +1395,7 @@ h4{
         }
        p{
         margin: 0px 8em;
-        width: 16em;
+        max-width: 16em;
         font-family: popinsbold;
         font-size: 2em;
         color: #ffffff;
@@ -1454,7 +1459,7 @@ ul{
     .tab{
         flex-basis: 20%;
         img{
-            width: 210px;
+            max-width: 210px;
         }
         h5{
             font-family: popinsmed;
@@ -1526,7 +1531,7 @@ ul{
             }
         }
     }
-    }
+}
     .zoro3{
         h2{
         font-family: popinsmed;
@@ -1538,3 +1543,155 @@ ul{
         text-align: center;
         }
     }
+
+/* MEDIA-QUERY for mobile    */
+
+@media  (max-width: 600px){
+
+ .bg{
+    background-image: none;
+    height: auto;
+ }
+ .bgimg{
+    display: block;
+    background-size: cover;
+ }
+ .topper{
+    display: none;
+ }
+ .menu{
+    display: none;
+ }
+ .members{
+    
+    p{
+      color: #000000;
+      margin-top: 0;
+      font-size: 1.5em;
+      text-align: center;
+      max-width: 22em;
+    }
+ }
+ .search{
+    width: 70%;
+    margin-left:1em;
+    form{
+        input{
+            background-color: rgba(128, 128, 128, 0.399);
+        }
+    }
+ }
+    .stack{
+        margin-bottom: 20px;
+        img{
+            margin-top: 1.5em;
+            margin-left: 16px;
+        }
+        span{
+            color: #000000;
+            margin-left: 18px;
+            
+        }
+    }
+    .scroll{
+        display: none;
+    }
+    .emirates{
+        flex-wrap: wrap;
+        img{
+            max-width: 10em;
+            flex-basis: 100%;
+            margin-top: 2em;
+            margin-bottom: 2em;
+        }
+    }
+    .travia{
+        img{
+            max-width: 25em;
+            margin-top: 2em;
+        }
+    }
+    .doc{
+        .zoro{
+            margin-top: 3em;
+            flex-basis: 70%;
+            text-align: center;
+            max-width: 90%;
+            margin: 0 auto;
+            span{
+                text-align: center;
+                margin-top: 4em;
+            }
+            h2{
+                font-size: 2em;
+                text-align: center;
+                margin-left: 1.2em;
+                margin-top: 10px;
+            }
+            p{
+                text-align: justify;
+                font-weight: 500;
+            }
+        }
+    }
+    .bloody{
+        flex-wrap: wrap;
+        .parent{
+            flex-basis: 50%;
+            .blood{
+                img{
+                    margin-left: 6.5em;
+                }
+                p{
+                    margin-left: 4em;
+                }
+            }
+        }
+
+    }
+    .more{
+        margin-top: 2em;
+    }
+    .flexible{
+        h4{
+            text-align: center;
+        }
+        h5{
+            text-align: center;
+            max-width: 13.8em;
+        }
+    }
+    .pop1{
+        img{
+            display: none;
+        }
+    }
+
+}
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* all catogories */
+   /* .cardio1{
+    ul{
+        flex-direction: column;
+    }
+    li{
+        margin-bottom: 10px;
+    }
+    }
+    */
