--- a/style.css
+++ b/style.css
@@ -1613,6 +1613,7 @@ ul{
         img{
             max-width: 25em;
             margin-top: 2em;
+            margin-left: -4em;
         }
     }
     .doc{
@@ -1629,7 +1630,7 @@ ul{
             h2{
                 font-size: 2em;
                 text-align: center;
-                margin-left: 0.2em;
+                margin-left: -0em;
                 margin-top: 10px;
             }
             p{
@@ -1649,10 +1650,10 @@ ul{
             flex-basis: 50%;
             .blood{
                 img{
-                    margin-left: 5.5em;
+                    margin-left: 4.5em;
                 }
                 p{
-                    margin-left: 2.3em;
+                    margin-left: 1.3em;
                 }
                 h4{
                     margin-left: 1em;
@@ -1738,17 +1739,17 @@ ul{
                 p{
                     text-align: justify;
                     max-width: 26em;
-                    margin-left: 4em;
+                    margin-left: 2.3em;
                 }
                 ul{
                     margin-top: 2em;
-                    margin-left: 3.2em;
+                    margin-left:1.8em;
                 }
             }
             .hats{
                 img{
                     margin-top: 2em;
-                    margin-left: 9em;
+                    margin-left: 7em;
                 }
             }
             .lap{
@@ -1781,7 +1782,7 @@ ul{
         .medi{
             h4{
                 font-size: 2em;
-                 margin-left: 1.9em;
+                 margin-left: 1.2em;
                 margin-bottom: 5px;
 
             }
@@ -1790,14 +1791,14 @@ ul{
             display: block;
             .vita{
                 img{
-                    margin-left: 6.5em;
+                    margin-left: 4.5em;
                     margin-top: 2em;
                 }
                 .sub{
-                    margin-left: 5.5em;
+                    margin-left: 3.5em;
                     h3{
                         max-width: 18em;
-                    }
+                    }yy
                     p{
                         max-width: 25em;
                         text-align: justify;
