--- a/style.css
+++ b/style.css
@@ -414,6 +414,9 @@ h2{
         max-width: 10.5em;
         color: #ffffff;
     }
+    img{
+        display: none;
+    }
 }
 .nami{
    margin-top: 11em;
@@ -1322,6 +1325,10 @@ h4{
     max-width: 100%;
     background-size: cover;
 }
+.bgimg3{
+    display: none;
+    width: 100%;
+}
 .issues2{
     h5{
         font-size: 13px;
@@ -1715,6 +1722,7 @@ ul{
         }
         .luffy{
            display: block;
+           
         }
         .chop{
             margin-top: 1em;
@@ -1724,15 +1732,18 @@ ul{
             }
             h5{
                 color: black;
-                font-size: 2em;
+                font-size: 1.5em;
                 text-align: center;
                 margin-left: 1.2em;
                 max-width: 13.5em;
                 
             }
+            /* img{
+                display: block;
+                background-size: cover;
+            } */
             a{
                 margin-top: 1em;
-
             }
         }
         .shanks{
@@ -1989,7 +2000,54 @@ ul{
                 }
             }
         }
-        
+
+        /* our partners */
+
+        .bg3{
+            background-image: none;
+            height: auto;
+         }
+         .bgimg3{
+            display: block;
+            background-size: cover;
+         }
+         .issues2{
+            width: 90%;
+            margin: 0 auto;
+            h5{
+                color: #000000;
+                margin-top: 2em;
+                font-size: 1em;
+                margin-bottom: 10px;
+            }
+            p{
+                color: #000000;
+                margin: 0;
+                font-size: 1.5em;
+
+            }
+         }
+         .zoro2{
+            width: 90%;
+            margin: 0 auto;
+            h3{
+                font-size: 1.8em;
+            }
+            p{
+                text-align: justify;
+            }
+         }
+         .daemon{
+            width: 90%;
+            margin: 0 auto;
+            .targer{
+                flex-basis: 50%;
+                img{
+                    max-width: 100%;
+                    margin-left: 0;
+                }
+            }
+         }
         
 
         /* .cardio1{
